--- a/package.json
+++ b/package.json
@@ -16,5 +16,22 @@
   "bugs": {
     "url": "https://github.com/benjGam/Prisma-Normalizer/issues"
   },
-  "homepage": "https://github.com/benjGam/Prisma-Normalizer#readme"
+  "homepage": "https://github.com/benjGam/Prisma-Normalizer#readme",
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.59.11",
+    "@typescript-eslint/parser": "^5.59.11",
+    "eslint": "^8.42.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "prettier": "^2.8.8",
+    "typescript": "^5.2.2"
+  },
+  "dependencies": {
+    "@nestjs/common": "^10.2.8",
+    "@nestjs/core": "^10.2.8",
+    "@nestjs/swagger": "^7.1.15",
+    "@prisma/client": "^5.6.0",
+    "rxjs": "^7.8.1",
+    "string-utils-ts": "^1.3.0"
+  }
 }
